--- a/index.html
+++ b/index.html
@@ -108,11 +108,6 @@
                 <i class="bx bx-certification"></i>Certificate
               </a>
             </li>
-            <li>
-              <a class="nav-link scrollto" href="#contact">
-                <i class="bx bx-phone"></i>Contact
-              </a>
-            </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -542,13 +537,11 @@
       <!-- Certificate Section -->
 
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact section-bg">
+      <!-- <section id="contact" class="contact section-bg">
         <div class="container">
           <div class="section-title">
-            <h2>Contact Me</h2>
-           
+            <h2>Contact Me</h2>    
           </div>
-
           <div class="row">
             <div class="col-lg-4">
               <div
@@ -566,7 +559,6 @@
                   <h4>Email:</h4>
                   <p>baqueranrose@gmail.com</p>
                 </div>
-
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
@@ -574,71 +566,9 @@
                 </div>
               </div>
             </div>
-
-            <div class="col-lg-8 mt-5 mt-lg-0">
-              <form
-                action="forms/contact.php"
-                method="post"
-                role="form"
-                class="php-email-form"
-                data-aos="fade-left"
-              >
-                <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input
-                      type="text"
-                      name="name"
-                      class="form-control"
-                      id="name"
-                      placeholder="Your Name"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input
-                      type="email"
-                      class="form-control"
-                      name="email"
-                      id="email"
-                      placeholder="Your Email"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="form-group mt-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                    required
-                  />
-                </div>
-                <div class="form-group mt-3">
-                  <textarea
-                    class="form-control"
-                    name="message"
-                    rows="5"
-                    placeholder="Message"
-                    required
-                  ></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">
-                    Your message has been sent. Thank you!
-                  </div>
-                </div>
-                <div class="text-center">
-                  <button type="submit">Send Message</button>
-                </div>
-              </form>
             </div>
           </div>
-        </div>
-      </section>
+      </section> -->
       <!-- End Contact Section -->
     </main>
     <!-- End #main -->
@@ -660,7 +590,6 @@
         </div>
       </div>
 
-      </div>
     </footer>
     <!-- End Footer -->
 
